# my_xgb

./: 0002.model  0020.model  0050.model  CMakeLists.txt  README.md  agaricus.txt.test  agaricus.txt.test.buffer  agaricus.txt.train  agaricus.txt.train.buffer  main.cpp  mushroom.conf  pred.txt
booster/: xgboost.h  xgboost_data.h  xgboost_gbmtree.h  xgboost_ini.h
booster/tree/: xgboost_col_treemaker.hpp  xgboost_row_treemaker.hpp  xgboost_svdf_tree.hpp
regression/: xgboost_reg.h  xgboost_reg_data.h  xgboost_reg_eval.h
utils/: xgb_config.h  xgb_random.h  xgboost_fmap.h  xgboost_matrix_csr.h  xgboost_omp.h  xgboost_stream.h  xgboost_utils.h
